# another-personal-finance-app

./: .gitignore  AGENTS.md  DB_CLI_GUIDE.md  README.md  SCHEDULER_README.md  SELF_HOSTING_GUIDE.md  UV_COMMANDS.md  app.py  db_cli.py  mock_insights.html  pyproject.toml  seed_dummy_user.py  start-react-app.sh  start.sh
.github/workflows/: deploy-frontend.yml  price-capture.yml
backend/: README.md  __init__.py  add_holding.py  add_sample_data.py  agent_prompts.py  agent_runner.py  agent_tools.py  cgi.py  database.py  main.py  portfolio.db  pyproject.toml  requirements.txt  start.sh
backend/templates/: index.html
frontend/: README.md  index.html  package.json
frontend-react/: index.html  package-lock.json  package.json  tailwind.config.cjs
frontend-react/src/: index.css
frontend-react/src/api/: client.ts
frontend-react/src/components/: Dashboard.tsx  HoldingsTable.tsx  MarketOverview.tsx  StatsCard.tsx  StockInsightsPanel.tsx  VisualizationsPanel.tsx
frontend-react/src/data/: mockInsights.ts
frontend-react/src/utils/: format.ts
frontend/static/: script.js
frontend/templates/: edit.html  index.html
scripts/: capture_prices.py
