[project]
name = "portfolio-tracker"
version = "1.0.0"
description = "A simple web application to track investment holdings"
authors = [{name = "Aditya Bhushan Singh"}]
readme = "README.md"
requires-python = ">=3.8.1"
dependencies = [
    "fastapi==0.104.1",
    "uvicorn[standard]==0.24.0",
    "jinja2==3.1.2",
    "python-multipart==0.0.6",
    "yfinance==0.2.32",
    "tabulate>=0.9.0",
    "pandas>=2.0.3",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "black>=24.0.0",
    "flake8>=7.0.0",
]

[tool.uv]
dev-dependencies = [
    "pytest>=8.0.0",
    "black>=24.0.0",
    "flake8>=7.0.0",
]
