[project]
name = "portfolio-tracker-backend"
version = "1.0.0"
description = "FastAPI backend for portfolio tracker with versioning"
authors = [{name = "Portfolio Tracker Team"}]
dependencies = [
    "fastapi>=0.104.1",
    "uvicorn[standard]>=0.24.0",
    "jinja2>=3.1.2",
    "python-multipart>=0.0.6",
    "yfinance>=0.2.18",
    "pydantic>=2.5.0",
    "apscheduler>=3.11.1",
    "pytz>=2025.2",
    "tabulate>=0.9.0",
    "pandas>=2.0.3",
]
requires-python = ">=3.8"
