[project]
name = "portfolio-tracker-backend"
version = "1.0.0"
description = "FastAPI backend for portfolio tracker with AI-powered insights"
authors = [{name = "Portfolio Tracker Team"}]
dependencies = [
    "fastapi>=0.115.5",
    "uvicorn[standard]>=0.32.0,<0.33",
    "jinja2==3.1.2",
    "python-multipart>=0.0.20,<0.1",
    "yfinance==0.2.18",
    "pydantic>=2.10,<3",
    "anyio>=4.5,<5",
    "ollama==0.2.1",
    "duckduckgo-search==6.2.5",
    "apscheduler>=3.11.1",
    "pytz>=2025.2",
    "tabulate>=0.9.0",
    "pandas>=2.0.3",
    "openai-agents>=0.6.0",
    "python-dotenv>=1.0.1",
]
requires-python = ">=3.9"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]

[tool.uv]
dev-dependencies = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "black>=24.0.0",
    "ruff>=0.5.0",
]
